--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,12 @@
+<% require 'rest-client' 
+
+value = RestClient::Request.execute(:url => "https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/RiotSchmick?api_key=#{apikey}", :method => :get, :verify_ssl => false) || "Didn't Work"
+
+
+%>
+
 <p>
   Key:  <%= apikey %>
+  <br>
+  Value: <%= value %>
 </p>
