API Key now comes from ENV var. Also minor fixes

--- a/views/hello_form.erb
+++ b/views/hello_form.erb
@@ -1,7 +1,7 @@
-<h1>Enter your API Key</h1>
+<h1>Enter a Summoner Name</h1>
 
 <form action="/hello/" method="POST">
-  API Key<input type="text" name="apikey">
+  Summoner Name: <input type="text" name="summonername">
   <br/>
   <input type="submit">
 </form>
