--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -1,6 +1,6 @@
 <h1>Enter a Summoner Name</h1>
 
-<form action="/hello/" method="POST">
+<form action="/summonerform/" method="POST">
   Summoner Name: <input type="text" name="summonername">
   <br/>
   <input type="submit">
