--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -3,5 +3,7 @@
 <form action="/summonerform/" method="POST">
   Summoner Name: <input type="text" name="summonername">
   <br/>
+  Region: <input type="text" name="region">
+  <br/>
   <input type="submit">
 </form>
