--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Rito Pls</title>
+    <title>Doppeldonger</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Rito Pls 2016
+                        Copyright &copy; Doppeldonger 2016
                     </div>
                 </div>
             </div>
