--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -2,10 +2,23 @@
 <html lang="en">
 
 <head>
-  <!-- CSS -->
+  <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="/css/freelancer.css" rel="stylesheet">
   <link href="/css/summoner_form.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
 </head>
 <body>
+  <div class="col-lg-12 text-center">
+      <h2>Select A Summoner</h2>
+  </div>
   <form action="/summonerform/" method="POST">
     <div class="input-group">
       <input name="summonername" type="text" placeholder="Please enter a Summoner Name..." class="form-control">
@@ -13,32 +26,30 @@
         <button class="btn btn-default" type="submit" id="addressSearch">Submit</button>
       </span>
     </div>
-    <span>
-      <form>
-        <input type="radio" id="NA1" name="region" value="NA1" checked>
-          <label for="NA1">NA1</label>
-        <input type="radio" id="BR" name="region" value="BR">
-          <label for="BR">BR</label>
-        <input type="radio" id="EUNE" name="region" value="EUNE">
-          <label for="EUNE">EUNE</label>
-        <input type="radio" id="EUW" name="region" value="EUW">
-          <label for="EUW">EUW</label>
-        <input type="radio" id="JP" name="region" value="JP">
-          <label for="JP">JP</label>
-        <input type="radio" id="KR" name="region" value="KR">
-          <label for="KR">KR</label>
-        <input type="radio" id="LAN" name="region" value="LAN">
-          <label for="LAN">LAN</label>
-        <input type="radio" id="LAS" name="region" value="LAS">
-          <label for="LAS">LAS</label>
-        <input type="radio" id="OCE" name="region" value="OCE">
-          <label for="OCE">OCE</label>
-        <input type="radio" id="RU" name="region" value="RU">
-          <label for="RU">RU</label>
-        <input type="radio" id="TR" name="region" value="TR">
-          <label for="TR">TR</label>
-      </form>
-    <span>
+    <form>
+      <input type="radio" id="NA1" name="region" value="NA1" checked>
+        <label for="NA1">NA1</label>
+      <input type="radio" id="BR" name="region" value="BR">
+        <label for="BR">BR</label>
+      <input type="radio" id="EUNE" name="region" value="EUNE">
+        <label for="EUNE">EUNE</label>
+      <input type="radio" id="EUW" name="region" value="EUW">
+        <label for="EUW">EUW</label>
+      <input type="radio" id="JP" name="region" value="JP">
+        <label for="JP">JP</label>
+      <input type="radio" id="KR" name="region" value="KR">
+        <label for="KR">KR</label>
+      <input type="radio" id="LAN" name="region" value="LAN">
+        <label for="LAN">LAN</label>
+      <input type="radio" id="LAS" name="region" value="LAS">
+        <label for="LAS">LAS</label>
+      <input type="radio" id="OCE" name="region" value="OCE">
+        <label for="OCE">OCE</label>
+      <input type="radio" id="RU" name="region" value="RU">
+        <label for="RU">RU</label>
+      <input type="radio" id="TR" name="region" value="TR">
+        <label for="TR">TR</label>
+    </form>
   </form>
 </body>
 </html>
