NA1 to NA. Title now redirects to homepage. Removed upper footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Doppeldonger</title>
+    <title>
+      Doppeldonger
+    </title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +45,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#page-top">Doppeldonger</a>
+          <a class="navbar-brand" href="/">Doppeldonger</a>
       </div>
   </nav>
 
@@ -65,12 +67,6 @@
 
     <!-- Footer -->
     <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                </div>
-            </div>
-        </div>
         <div class="footer-below">
             <div class="container">
                 <div class="row">
