--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -26,9 +26,10 @@
         <button class="btn btn-default" type="submit" id="addressSearch">Submit</button>
       </span>
     </div>
-    <form>
+    <br>
+    <div width="100%" align="center">
       <input type="radio" id="NA1" name="region" value="NA1" checked>
-        <label for="NA1">NA1</label>
+        <label for="NA1">NA</label>
       <input type="radio" id="BR" name="region" value="BR">
         <label for="BR">BR</label>
       <input type="radio" id="EUNE" name="region" value="EUNE">
@@ -49,7 +50,7 @@
         <label for="RU">RU</label>
       <input type="radio" id="TR" name="region" value="TR">
         <label for="TR">TR</label>
-    </form>
+    </div>
   </form>
 </body>
 </html>
