--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -353,6 +353,9 @@ footer .footer-col {
 footer .footer-below {
     padding: 25px 0;
     background-color: #233140;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
 }
 
 .btn-social {
