Temp image added. Made it float over header

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,6 +18,7 @@
 
     <!-- Custom CSS -->
     <link href="/css/freelancer.css" rel="stylesheet">
+    <link href="/css/layout.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -35,6 +36,7 @@
 
 <body id="page-top" class="index">
   <!-- Navigation -->
+  <img class="heimer_img" src="/img/heimerdinger_temp.png" alt="Heimer Logo">
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
