Fixed the oops page

--- a/views/oops.erb
+++ b/views/oops.erb
@@ -15,10 +15,10 @@
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 </head>
-<body align="center">
+<body>
   <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;">
-  <div class="col-lg-12 text-center"
-    <br><h2>Oops. It looks like something went wrong!</h2>
+  <div class="col-lg-12 text-center">
+    <h2><font color="white">Oops. It looks like something went wrong!</font></h2>
   <div>
 </body>
 </html>
