Title doesn't move on resize

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -38,7 +38,7 @@
   <!-- Navigation -->
   <img class="heimer_img" src="/img/heimerdinger_temp.png" alt="Heimer Logo">
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
