--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -87,7 +87,6 @@ header {
 header .container {
     padding-top: 25px;
     padding-bottom: 15px;
-    margin-top: 100px;
 }
 
 header img {
@@ -206,6 +205,8 @@ section.success a.active {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    border-color: black;
+    border-style: solid;
 }
 
 #portfolio .portfolio-item .portfolio-link {
