Fixed OOPS page. Also, moved top right heimer logo to just on the first page

--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -16,6 +16,7 @@
 
 </head>
 <body>
+  <img class="heimer_img" src="/img/heimerdinger_temp.png" alt="Heimer Logo">
   <section id="portfolio">
     <div class="container">
       <div class="row" style="padding-top:200px">
