--- a/views/oops.erb
+++ b/views/oops.erb
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="/css/freelancer.css" rel="stylesheet">
-  <link href="/css/summoner_form.css" rel="stylesheet">
-
-  <!-- Custom Fonts -->
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-</head>
 <body>
-  <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;">
-  <div class="col-lg-12 text-center">
-    <h2><font color="white">Oops. It looks like something went wrong!</font></h2>
-  <div>
+  <section id="portfolio">
+    <div class="container">
+      <div class="row" style="padding-top:50px;">
+        <div class="col-lg-12 text-center">
+          <h2>OOPS! It Looks Like Something Went Wrong!</h2>
+          <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;position:static;">
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
