--- a/views/index.erb
+++ b/views/index.erb
@@ -43,11 +43,11 @@ end
 </head>
 <body>
   <section id="portfolio">
-    <div class="container">
+    <div class="container" style="padding-top:50px;">
       <div class="col-lg-6">
         <div class="row">
           <div class="col-sm-12 portfolio-item">
-            Select A Summoner Goes Here
+            <%= erb :select_a_summoner %>
           </div>
         </div>
         <div class="row">
