--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -18,46 +18,9 @@
 <body>
   <img class="heimer_img" src="/img/heimerdinger_temp.png" alt="Heimer Logo">
   <section id="portfolio">
-    <div class="container">
-      <div class="row" style="padding-top:200px">
-        <div class="col-lg-12 text-center">
-          <h2>Select A Summoner</h2>
-        </div>
-        <form action="/summonerform/" method="POST">
-          <div class="input-group">
-            <input name="summonername" type="text" placeholder="Please enter a Summoner Name..." class="form-control">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="submit" id="addressSearch">Submit</button>
-            </span>
-          </div>
-          <br>
-          <div width="100%" align="center">
-            <input type="radio" id="NA1" name="region" value="NA1" checked>
-              <label for="NA1">NA</label>
-            <input type="radio" id="BR" name="region" value="BR">
-              <label for="BR">BR</label>
-            <input type="radio" id="EUNE" name="region" value="EUNE">
-              <label for="EUNE">EUNE</label>
-            <input type="radio" id="EUW" name="region" value="EUW">
-              <label for="EUW">EUW</label>
-            <input type="radio" id="JP" name="region" value="JP">
-              <label for="JP">JP</label>
-            <input type="radio" id="KR" name="region" value="KR">
-              <label for="KR">KR</label>
-            <input type="radio" id="LAN" name="region" value="LAN">
-              <label for="LAN">LAN</label>
-            <input type="radio" id="LAS" name="region" value="LAS">
-              <label for="LAS">LAS</label>
-            <input type="radio" id="OCE" name="region" value="OCE">
-              <label for="OCE">OCE</label>
-            <input type="radio" id="RU" name="region" value="RU">
-              <label for="RU">RU</label>
-            <input type="radio" id="TR" name="region" value="TR">
-              <label for="TR">TR</label>
-          </div>
-        </form>
-      <div>
-    <div>
+    <div class="container" style="padding-top:200px;">
+      <%= erb :select_a_summoner %>
+    </div>
   </section>
 </body>
 </html>
