--- a/views/index.erb
+++ b/views/index.erb
@@ -47,6 +47,9 @@ end
       <div class="col-lg-6">
         <div class="row">
           <div class="col-sm-12 portfolio-item">
+            <div class="col-lg-12 text-center">
+              <h2>Select Another Summoner?</h2>
+            </div>
             <%= erb :select_a_summoner %>
           </div>
         </div>
