--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -18,7 +18,10 @@
 <body>
   <img class="heimer_img" src="/img/heimerdinger_temp.png" alt="Heimer Logo">
   <section id="portfolio">
-    <div class="container" style="padding-top:200px;">
+    <div class="col-lg-12 text-center" style="padding-top:200px;">
+      <h2>Select A Summoner</h2>
+    </div>
+    <div class="container">
       <%= erb :select_a_summoner %>
     </div>
   </section>
