--- a/views/index.erb
+++ b/views/index.erb
@@ -2,29 +2,24 @@
 <html lang="en">
 
 <%
-require 'rest-client'
-require 'json'
+require './lib/donger_rest'
+require './lib/donger_graph'
 
-summoner_hash = JSON.parse(RestClient::Request.execute(:url => "https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#{summonername}?api_key=#{$API_KEY}", :method => :get, :verify_ssl => false))
-summoner_id = summoner_hash.values.first["id"]
-
-summoner_masteries = JSON.parse(RestClient::Request.execute(:url => "https://na.api.pvp.net/championmastery/location/#{region}/player/#{summoner_id}/champions?api_key=#{$API_KEY}", :method => :get, :verify_ssl => false))
-champion_data = JSON.parse(RestClient::Request.execute(:url => "https://global.api.pvp.net/api/lol/static-data/na/v1.2/champion?api_key=#{$API_KEY}", :method => :get, :verify_ssl => false))["data"].values
-
-champion_data_by_id = {}
-champion_data.each do |champion|
-  champion_data_by_id[champion["id"]] = champion["name"]
-end
-
-champion_pool = []
-
-summoner_masteries.each do |entry|
-  if entry["championLevel"] > 3
-    champion_pool.push(champion_data_by_id[entry["championId"]])
+graph = DongerGraph.new()
+mastery_data = graph.get_mastery(summonername)["data"]
+if mastery_data.length == 0
+  summoner = DongerRest.get_summoners([summonername]).values[0]
+  id = summoner["id"]
+  masteries = DongerRest.get_masteries(id)
+  raise "No Masteries" if masteries.length == 0
+  graph.add_summoner(id, summonername)
+  masteries.each do |mastery|
+    graph.add_mastery(id, mastery["championId"], mastery["championPoints"])
   end
 end
 
-champion_pool = champion_pool.slice(0,3)
+recommendation = graph.recommend(summonername)["data"]
+champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 %>
 
 <body>
