--- a/views/index.erb
+++ b/views/index.erb
@@ -21,10 +21,10 @@ end
 recommendation = graph.recommend(summonername)["data"]
 champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
-#champion_pool = ["Bard","Aatrox","Ahri"]
+#champion_pool = ["Cho'Gath","Aatrox","Ahri"]
 %>
 
-<body onLoad="selectChampion('<%=champion_pool[0]%>')">
+<body>
   <section id="portfolio">
     <div class="container" style="padding-top:50px;">
       <div class="col-lg-3">
@@ -33,7 +33,8 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
       <% champion_pool.each do |champion| %>
       <div class="col-lg-3" align="center">
         <h3><%=champion%></h3>
-        <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=champion%>_0.jpg" style="max-width:100%;position:relative;"</img>
+        <% skin_key = DongerRest.get_champion_skin_key(champion) %>
+        <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>_0.jpg" style="max-width:100%;position:relative;"</img>
         <div class="row" style="padding-top:20px">
           <% champion_passive = DongerRest.get_passive(champion)%>
           <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
@@ -49,6 +50,5 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
       <% end %>
     </div>
   </section>
-
 </body>
 </html>
