--- a/views/index.erb
+++ b/views/index.erb
@@ -36,6 +36,16 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         <h3><%=champion%></h3>
         <% skin_key = DongerRest.get_champion_skin_key(champion) %>
         <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>_0.jpg" style="max-width:100%;position:relative;"</img>
+        <div class="row" style="padding-top:20px">
+          <% champion_passive = DongerRest.get_passive(champion)%>
+          <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
+            <img title="<%=champion_passive["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/passive/<%=champion_passive["image"]%>" style="max-width:80%;position:relative;">
+          </div>
+          <% DongerRest.get_champion_skills(champion).each do |spell| %>
+          <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
+            <img title="<%=spell["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/spell/<%=spell["image"]%>" style="max-width:80%;position:relative;">
+          </div>
+          <% end %>
         </div>
       </div>
       <% end %>
