--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
 %>
 
-<body>
+<body onLoad="setQuote('Just as I hypothesized!')">
   <section id="portfolio">
     <div class="container" style="padding-top:50px;">
       <div class="col-lg-3">
