--- a/views/oops.erb
+++ b/views/oops.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
+<body onLoad="setQuote('Eureka!!')">
   <section id="portfolio">
     <div class="container">
       <div class="row" style="padding-top:50px;">
