--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
+<body onLoad=setQuote('Ah,&nbsp;the&nbsp;sweet&nbsp;smell&nbsp;of&nbsp;science!')>
   <section id="portfolio">
     <div class="col-lg-12 text-center" style="padding-top:200px;">
       <h2>Select A Summoner</h2>
