--- a/views/index.erb
+++ b/views/index.erb
@@ -27,16 +27,24 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
 <body onLoad="setQuote('Just as I hypothesized!')">
   <section id="portfolio">
-    <div class="container" style="padding-top:50px;">
-      <div class="col-lg-3">
-        Info goes here
+    <div class="container" style="padding-top:100px;">
+      <div class="col-lg-3" align="center">
+        <h2><%=summonername%></h2>
+        <p>Title</p>
+        <div id="row">
+          Current Mastery Information Here
+          <%=mastery_data%>
+        </div>
+        <div id="row">
+          Patterns Found Here
+        </div>
       </div>
       <% champion_pool.each do |champion| %>
       <div class="col-lg-3" align="center">
         <h3><%=champion%></h3>
         <% skin_key = DongerRest.get_champion_skin_key(champion) %>
         <img src="http://ddragon.leagueoflegends.com/cdn/img/champion/loading/<%=skin_key%>_0.jpg" style="max-width:100%;position:relative;"</img>
-        <div class="row" style="padding-top:20px">
+        <div class="row" style="padding-top:20px;padding-left:10px;padding-right:10px;">
           <% champion_passive = DongerRest.get_passive(champion)%>
           <div class="col-sm-3" align="center" style="padding-left:0px;padding-right:0px;">
             <img title="<%=champion_passive["description"]%>" src="http://ddragon.leagueoflegends.com/cdn/6.9.1/img/passive/<%=champion_passive["image"]%>" style="max-width:80%;position:relative;">
