Add Mastery Info

--- a/views/index.erb
+++ b/views/index.erb
@@ -33,7 +33,11 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         <p>Title</p>
         <div id="row">
           Current Mastery Information Here
-          <%=mastery_data%>
+          <%=if masteries.length != 0
+            masteries
+          else%>
+          <p>No Mastery Data Found!</p>
+          <% end %>
         </div>
         <div id="row">
           Patterns Found Here
