--- a/views/index.erb
+++ b/views/index.erb
@@ -33,9 +33,9 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         <p>Title</p>
         <div id="row">
           Current Mastery Information Here
-          <%=if masteries.length != 0
-            masteries
-          else%>
+          <%=if masteries.length != 0<%>
+          <p>found</p>
+          <else%>
           <p>No Mastery Data Found!</p>
           <% end %>
         </div>
