--- a/views/index.erb
+++ b/views/index.erb
@@ -32,7 +32,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         <h2><%=summonername%></h2>
         <p>Title</p>
         <div id="row">
-          masteries
+          <%=masteries%>
         </div>
         <div id="row">
           Patterns Found Here
