--- a/views/index.erb
+++ b/views/index.erb
@@ -34,14 +34,14 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
       <div class="col-lg-3" align="center">
         <h2><%=summonername%></h2>
         <p>Title</p>
-        <div id="row">
+        <div id="col-md-12">
           <%masteries.each do |mastery|%>
             <div class="col-md-3">
               <div class="row"><%=mastery["championLevel"]%></div>
               <div class="row"><%=mastery["championPoints"]%></div>
             </div>
             <div class="col-md-9">
-              <%=DongerRest.get_champion_name(mastery["championId"])%>
+              <%=DongerRest.get_champion_name(mastery["championId"])  gi%>
             </div>
           <%end%>
         </div>
