--- a/views/index.erb
+++ b/views/index.erb
@@ -34,7 +34,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
       <div class="col-lg-3" align="center">
         <h2><%=summonername%></h2>
         <p>Title</p>
-        <div id="col-md-12">
+        <div class="col-md-12">
           <%masteries.each do |mastery|%>
             <div class="col-md-3">
               <div class="row"><%=mastery["championLevel"]%></div>
