--- a/views/index.erb
+++ b/views/index.erb
@@ -36,12 +36,14 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         <p>Title</p>
         <div class="col-md-12">
           <%masteries.each do |mastery|%>
-            <div class="col-md-3">
-              <div class="row"><%=mastery["championLevel"]%></div>
-              <div class="row"><%=mastery["championPoints"]%></div>
-            </div>
-            <div class="col-md-9">
-              <%=DongerRest.get_champion_name(mastery["championId"])%>
+            <div class="row">
+              <div class="col-md-3">
+                <div class="row"><%=mastery["championLevel"]%></div>
+                <div class="row"><%=mastery["championPoints"]%></div>
+              </div>
+              <div class="col-md-9">
+                <%=DongerRest.get_champion_name(mastery["championId"])%>
+              </div>
             </div>
           <%end%>
         </div>
