Fixed oops page

--- a/views/oops.erb
+++ b/views/oops.erb
@@ -6,8 +6,8 @@
     <div class="container">
       <div class="row" style="padding-top:50px;">
         <div class="col-lg-12 text-center">
-          <h2>OOPS! It Looks Like Something Went Wrong!</h2>
-          <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;position:static;">
+          <h2 style="padding-top:20px;">OOPS! It Looks Like Something Went Wrong!</h2>
+          <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;position:static;padding-top:20px;">
         </div>
       </div>
     </div>
