--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -3,7 +3,7 @@
 <body onLoad=setQuote('Ah,&nbsp;the&nbsp;sweet&nbsp;smell&nbsp;of&nbsp;science!')>
   <section id="portfolio">
     <div class="col-lg-12 text-center" style="padding-top:200px;padding-bottom:15px;">
-      <h2>What's your name, Summoner?</h2>
+      <h2>What's your name Summoner?</h2>
     </div>
     <div class="container">
       <%= erb :select_a_summoner %>
