--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -194,13 +194,14 @@ section.success a.active {
 
 @media(max-width:767px) {
     section {
-        padding: 75px 0;
+        padding: 5px 0;
     }
 
     section.first {
         padding-top: 75px;
     }
 }
+
 
 #portfolio .portfolio-item {
     right: 0;
@@ -257,6 +258,21 @@ section.success a.active {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
     }
+}
+
+@media(max-width:767px) {
+  #heimer_img {
+    display: none;
+  }
+}
+
+@media(max-height:550px) {
+  #heimer_img {
+    display: none;
+  }
+  section {
+      padding: 5px 0;
+  }
 }
 
 .btn-outline {
@@ -356,6 +372,36 @@ footer .footer-below {
     width: 100%;
     position: fixed;
     bottom: 0px;
+}
+
+@media(max-width:767px) {
+    footer .footer-below {
+      position: static;
+    }
+
+    #my-header {
+      position: static;
+    }
+}
+
+@media(max-width:601px) {
+  #summoner-request-title {
+    padding-top:0px;
+    padding-bottom:15px;
+  }
+}
+
+@media(min-width:601px) {
+  #summoner-request-title {
+    padding-top:150px;
+    padding-bottom:15px;
+  }
+}
+
+@media(min-width:767px) {
+    #my-header {
+      position: fixed;
+    }
 }
 
 .btn-social {
