--- a/views/summoner_form.erb
+++ b/views/summoner_form.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <body onLoad=setQuote('Ah,&nbsp;the&nbsp;sweet&nbsp;smell&nbsp;of&nbsp;science!')>
   <section id="portfolio">
-    <div class="col-lg-12 text-center" style="padding-top:200px;padding-bottom:15px;">
+    <div id="summoner-request-title" class="col-lg-12 text-center">
       <h2>What's your name Summoner?</h2>
     </div>
     <div class="container">
