--- a/views/index.erb
+++ b/views/index.erb
@@ -54,8 +54,8 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-9" style="padding-bottom:20px">
+        <div class="col-md-3"></div>
+        <div class="col-md-9" style="padding-bottom:20px">
           <h2> Have you considered trying...</h2>
         </div>
       </div>
