--- a/views/oops.erb
+++ b/views/oops.erb
@@ -4,10 +4,13 @@
 <body onLoad="setQuote('Eureka!')">
   <section id="portfolio">
     <div class="container">
-      <div class="row" style="padding-top:50px;">
-        <div class="col-lg-12 text-center">
-          <h2 style="padding-top:20px;">OOPS! It Looks Like Something Went Wrong!</h2>
-          <img src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="width:60%;height:60%;position:static;padding-top:20px;">
+      <div class="row" style="padding-top:10px;padding-bottom:10px;">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div id="oops-div" class="col-md-6 text-center">
+            <h3 id="oops-text">OOPS! It Looks Like Something Went Wrong!</h3>
+            <img id="hiemer-oops" src="/img/heimerdinger_blown_up.jpg" alt="Heimer Blown Up" style="height:80%;width:80%;position:static;padding-top:20px;">
+          </div>
         </div>
       </div>
     </div>
