--- a/views/index.erb
+++ b/views/index.erb
@@ -32,7 +32,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
     <div class="container" style="padding-top:100px;">
       <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-9" style="padding-bottom:20px">
+        <div class="col-md-9" style="padding-bottom:20px;text-align:center;">
           <h2> Have you considered trying...</h2>
         </div>
       </div>
