linking should work again

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
       <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <div class="row" style="padding-left:10px;">
-          <a class="navbar-brand" style="font-size:30px";href="/">Doppeldonger</a>
+          <a class="navbar-brand" style="font-size:30px" href="/">Doppeldonger</a>
         </div>
         <div class="row">
           <p id="quote" class="small" id="quote" style="color:#fff;padding-left:35px;"></p>
