--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
 
 <body id="page-top" class="index">
   <!-- Navigation -->
-  <nav id="my-header" class="navbar navbar-default" style="color:black;width:100%;padding-top:25px;padding-bottom:25px;left:0;right:0;z-index:1030;">
+  <nav id="my-header" class="navbar navbar-default" style="color:#0f0b05;width:100%;padding-top:25px;padding-bottom:25px;z-index:1030;">
       <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <div class="row" style="padding-left:10px;">
