--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -396,7 +396,7 @@ footer .footer-below {
     bottom: 0px;
 }
 
-@media(max-width:767px) {
+@media(max-width:767px) and (max-height:500px),(max-height:400px) {
     footer .footer-below {
       position: static;
     }
