--- a/views/index.erb
+++ b/views/index.erb
@@ -36,7 +36,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
           <h2> Have you considered trying...</h2>
         </div>
       </div>
-      <div id="summonerinfo" class="col-lg-3" align="center">
+      <div class="col-lg-3" align="center">
         <h2><%=summonername%></h2>
         <p>Title</p>
         <div class="col-md-12">
