--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -5,12 +5,15 @@
  */
 
 html, body, {
-     position:fixed;
-     top:0;
-     bottom:0;
-     left:0;
-     right:0;
- }
+  margin:0;
+	padding:0;
+	height:100%;
+}
+
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
 
 body {
     overflow-x: hidden;
@@ -400,8 +403,8 @@ footer .footer-col {
 footer .footer-below {
     padding: 25px 0;
     background-color: #0F0B05;
+	  position:absolute;
     width: 100%;
-    position: fixed;
     bottom: 0px;
 }
 
