--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,36 +35,37 @@
 </head>
 
 <body id="page-top" class="index">
-  <!-- Navigation -->
-  <nav id="my-header" class="navbar navbar-default" style="color:#0f0b05;width:100%;padding-top:25px;padding-bottom:25px;z-index:1030;">
-      <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-        <div class="row" style="padding-left:10px;">
-          <a class="navbar-brand" style="font-size:30px" href="/">Doppeldonger</a>
-        </div>
-        <div class="row">
-          <p id="quote" class="small" id="quote" style="color:#fff;padding-left:35px;"></p>
-        </div>
-  </nav>
+  <div id="wrapper">
+    <!-- Navigation -->
+    <nav id="my-header" class="navbar navbar-default" style="color:#0f0b05;width:100%;padding-top:25px;padding-bottom:25px;z-index:1030;">
+        <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+          <div class="row" style="padding-left:10px;">
+            <a class="navbar-brand" style="font-size:30px" href="/">Doppeldonger</a>
+          </div>
+          <div class="row">
+            <p id="quote" class="small" id="quote" style="color:#fff;padding-left:35px;"></p>
+          </div>
+    </nav>
 
+    </div>
+      <img id="heimer_img" src="/img/Heimer200.png" alt="Heimer Logo">
+      <%= yield %>
+    </div>
+
+      <!-- Footer -->
+      <footer class="text-center">
+          <div class="footer-below">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-lg-12">
+                          Doppeldonger isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
   </div>
-    <img id="heimer_img" src="/img/Heimer200.png" alt="Heimer Logo">
-    <%= yield %>
-  </div>
-
-    <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Doppeldonger isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
