--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -15,6 +15,14 @@ html, body, {
   position:relative;
 }
 
+#my-footer {
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
 body {
     overflow-x: hidden;
 }
@@ -403,7 +411,7 @@ footer .footer-col {
 footer .footer-below {
     padding: 25px 0;
     background-color: #0F0B05;
-	  position:absolute;
+    position:absolute;
     width: 100%;
     bottom: 0px;
 }
