--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,26 +46,22 @@
           <div class="row">
             <p id="quote" class="small" id="quote" style="color:#fff;padding-left:35px;"></p>
           </div>
+        </div>
     </nav>
 
-    </div>
+    <div style-"padding-bottom:100px;">
       <img id="heimer_img" src="/img/Heimer200.png" alt="Heimer Logo">
       <%= yield %>
     </div>
 
       <!-- Footer -->
-      <footer class="text-center">
-          <div class="footer-below">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-lg-12">
-                          Doppeldonger isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </footer>
+    <div id="my-footer" style="text-align:center;color:#fff;background-color:#000;">
+        <div class="container" style="padding-top:20px;">
+            Doppeldonger isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+        </div>
+    </div>
   </div>
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
