--- a/views/layout.erb
+++ b/views/layout.erb
@@ -49,7 +49,7 @@
         </div>
     </nav>
 
-    <div style-"padding-bottom:150px;">
+    <div style="padding-bottom:125px;">
       <img id="heimer_img" src="/img/Heimer200.png" alt="Heimer Logo">
       <%= yield %>
     </div>
