--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%;padding:0px;margin:0px;">
 
 <head>
 
@@ -34,7 +34,7 @@
 
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" style="height:100%;padding:0px;margin:0px;">
   <div id="wrapper">
     <!-- Navigation -->
     <nav id="my-header" class="navbar navbar-default" style="color:#0f0b05;width:100%;padding-top:25px;padding-bottom:25px;z-index:1030;">
