--- a/views/index.erb
+++ b/views/index.erb
@@ -37,7 +37,7 @@ champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
         </div>
       </div>
       <div class="col-lg-3" align="center">
-        <h2><%=summonername%></h2>
+        <h2 stye="font-size:1.7em;"><%=summonername%></h2>
         <p>Title</p>
         <div class="col-md-12">
           <hr>
