Fixed code, using graph object

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,8 +23,8 @@ end
 recommendation = graph.recommend(summonername)["data"]
 champion_pool = recommendation.map{|row| row[0]["data"]["name"]}
 
-#uniqueness = DongerGraph.get_uniqueness(summonername);
-attributes = DongerGraph.get_attributes(summonername);
+uniqueness = graph.get_uniqueness(summonername)
+attributes = graph.get_attributes(summonername)
 
 # champion_pool = ["Cho'Gath","Aatrox","Ahri"]
 %>
@@ -44,6 +44,7 @@ attributes = DongerGraph.get_attributes(summonername);
         <div class="col-md-12">
           <hr>
           <p style="text-decoration:underline;">Top Masteries</p>
+          <p><%=uniqueness%></p>
           <%masteries.each do |mastery|%>
             <div class="row">
               <div class="col-md-4">
